--- a/report.tex
+++ b/report.tex
@@ -157,7 +157,7 @@
 
     \begin{figure}[t]
       \centering
-      \includegraphics[width=8cm]{gel}
+      \includegraphics[width=8cm]{supergel}
       \caption{Agarose Gel}
       \label{fig:mesh1}
     \end{figure}
@@ -254,12 +254,9 @@ it would be suggested that the polyplex cells are treated in 3 hour increments f
     \includegraphics[width=8cm]{il6-bactin}
     \caption{Logarithmic fold Inductions for Interleukin-6 vs $\beta$-actin.
       From left to right, the comparisons are as follows:
-      From left to right, the comparisons are as follows:
-      Polyplex treated cells for 24 hours version [AV] vs Cells that were not washed, Polyplex treated cells for 24 hours version [AV]
-      vs Just cells, Cells that were not washed vs Just cells,
-      Polyplex treated cells for 24 hours version [Tk] vs Cells that were not washed,
-      Polyplex treated cells for 24 hours version [Tk] vs Just cells, and Polyplex treated cells for 6 hours with iCRT vs
-      Cells that were not washed after 6 hours.
+      Comparisons are made between Polyplex treated cells for 24 hours version [AV], Polyplex treated cells for 24 hours version [Tk],
+      Polyplex treated cells for 6 hours with iCRT, Cells that were not washed after 6 hours, cells that were not washed and just cells.
+      The resulting values were calculated by the average of three simultaneous QtPCR runs and fold inductions were calculated by the $\Delta$\Delta$ct method.
     }
     \label{fig:mesh1}
   \end{figure}
@@ -269,12 +266,9 @@ it would be suggested that the polyplex cells are treated in 3 hour increments f
     \includegraphics[width=8cm]{il6-rpl13a}
     \caption{Logarithmic fold Inductions for Interleukin-6 vs RPL13A.
       From left to right, the comparisons are as follows:
-      From left to right, the comparisons are as follows:
-      Polyplex treated cells for 24 hours version [AV] vs Cells that were not washed, Polyplex treated cells for 24 hours version [AV]
-      vs Just cells, Cells that were not washed vs Just cells,
-      Polyplex treated cells for 24 hours version [Tk] vs Cells that were not washed,
-      Polyplex treated cells for 24 hours version [Tk] vs Just cells, and Polyplex treated cells for 6 hours with iCRT vs
-      Cells that were not washed after 6 hours.
+      Comparisons are made between Polyplex treated cells for 24 hours version [AV], Polyplex treated cells for 24 hours version [Tk],
+      Polyplex treated cells for 6 hours with iCRT, Cells that were not washed after 6 hours, cells that were not washed and just cells.
+      The resulting values were calculated by the average of three simultaneous QtPCR runs and fold inductions were calculated by the $\Delta$\Delta$ct method.
     }
     \label{fig:mesh1}
   \end{figure}
@@ -284,12 +278,9 @@ it would be suggested that the polyplex cells are treated in 3 hour increments f
     \includegraphics[width=8cm]{infa-bactin}
     \caption{Logarithmic fold Inductions for Interferon-$\alpha$ vs $\beta$-actin.
       From left to right, the comparisons are as follows:
-      From left to right, the comparisons are as follows:
-      Polyplex treated cells for 24 hours version [AV] vs Cells that were not washed, Polyplex treated cells for 24 hours version [AV]
-      vs Just cells, Cells that were not washed vs Just cells,
-      Polyplex treated cells for 24 hours version [Tk] vs Cells that were not washed,
-      Polyplex treated cells for 24 hours version [Tk] vs Just cells, and Polyplex treated cells for 6 hours with iCRT vs
-      Cells that were not washed after 6 hours.
+      Comparisons are made between Polyplex treated cells for 24 hours version [AV], Polyplex treated cells for 24 hours version [Tk],
+      Polyplex treated cells for 6 hours with iCRT, Cells that were not washed after 6 hours, cells that were not washed and just cells.
+      The resulting values were calculated by the average of three simultaneous QtPCR runs and fold inductions were calculated by the $\Delta$\Delta$ct method.
     }
     \label{fig:mesh1}
   \end{figure}
@@ -297,13 +288,11 @@ it would be suggested that the polyplex cells are treated in 3 hour increments f
   \begin{figure}[t]
     \centering
     \includegraphics[width=8cm]{infa-rpl13a}
-    \caption{Logarithmic fold Inductions for Interferon-$\alpha$ vs RPL13A.
-      From left to right, the comparisons are as follows:
-      Polyplex treated cells for 24 hours version [AV] vs Cells that were not washed, Polyplex treated cells for 24 hours version [AV]
-      vs Just cells, Cells that were not washed vs Just cells,
-      Polyplex treated cells for 24 hours version [Tk] vs Cells that were not washed,
-      Polyplex treated cells for 24 hours version [Tk] vs Just cells, and Polyplex treated cells for 6 hours with iCRT vs
-      Cells that were not washed after 6 hours.
+    \caption{
+    Logarithmic fold Inductions for Interferon-$\alpha$ an immune cytokine vs RPL13A a standard protien.
+    Comparisons are made between Polyplex treated cells for 24 hours version [AV], Polyplex treated cells for 24 hours version [Tk],
+    Polyplex treated cells for 6 hours with iCRT, Cells that were not washed after 6 hours, cells that were not washed and just cells.
+    The resulting values were calculated by the average of three simultaneous QtPCR runs and fold inductions were calculated by the $\Delta$\Delta$ct method.
     }
     \label{fig:mesh1}
   \end{figure}
