--- a/report.tex
+++ b/report.tex
@@ -146,21 +146,28 @@
         \hline
         Poly24[Tk]-Cells & 6.54E-02 & 5.90E-02 & 2.57E-02 & 2.55E-02\\
         \hline
-        Poly6+iCRT-NoWash6 & 500.25 & 421.07 & 25.83 & 22.29 \\
+        Poly6+iCRT-NoWash6 & 5.00E+2 & 4.21E+2 & 2.58E+1 & 2.23E+1 \\
         \hline
       \end{tabular}
       \end{center}
     \end{table}
 
   \subsection{Gel Electrophoresis}
-    An argarose gel was ran to further analyze the amplified cDNA from the QtPCR reaction.
 
     \begin{figure}[t]
       \centering
       \includegraphics[width=8cm]{supergel}
-      \caption{Agarose Gel}
+      \caption{A 1.2 agarose gel}
       \label{fig:mesh1}
     \end{figure}
+
+    The selections of PCR products was based off of melt curves that were inconsistent with
+    surrounding wells of similar product (i.e. $\beta$-actin for just cells).
+    Lanes 2-4 (Wells: E1,E2,E3,G1) consists of -RT solutions. These lanes are empty displaying
+    genomic DNA that is almost undetectable. Lane 8 (Well A5) displays a lack of cDNA
+    for Interferon-$\alpha$ where there should exist amplified cDNA.
+
+    
 
 \section{Discussion}
 
@@ -198,19 +205,19 @@ it would be suggested that the polyplex cells are treated in 3 hour increments f
       \hline
       & 1 & 2 & 3 & 4 & 5 & 6\\
       \hline
-      A (Poly24[TK]) & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      A & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
       \hline
-      B (Just Cells) & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      B & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
       \hline
-      C (No Wash) & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      C & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
       \hline
-      D (Poly24[AV]) & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      D & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
       \hline
-      E (-RT) & Ts & Ni & AV & Ts & Ni & AV\\
+      E & Ts & Ni & AV & Ts & Ni & AV\\
       \hline
-      E (NTC) & Ts & Ni & AV & Ts & Ni & AV\\
+      E & Ts & Ni & AV & Ts & Ni & AV\\
       \hline
-      G & Mi (-RT) & Mi (NTC) & & Mi (-RT) & Mi (NTC) & \\
+      G & Mi(-RT) & Mi(NTC) & & Mi(-RT) & Mi(NTC) & \\
       \hline
       H & & & & & &\\
       \hline
@@ -229,19 +236,19 @@ it would be suggested that the polyplex cells are treated in 3 hour increments f
       \hline
       & 7 & 8 & 9 & 10 & 11 & 12 \\
       \hline
-      A (Poly24[TK]) & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      A & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
       \hline
-      B (Just Cells) & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      B & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
       \hline
-      C (No Wash) & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      C & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
       \hline
-      D (Poly24[AV]) & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
+      D & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L & 4ng/$\mu$L\\
       \hline
-      E (-RT) & Ts & Ni & AV & Ts & Ni & AV\\
+      E & Ts & Ni & AV & Ts & Ni & AV\\
       \hline
-      E (NTC) & Ts & Ni & AV & Ts & Ni & AV\\
+      E & Ts & Ni & AV & Ts & Ni & AV\\
       \hline
-      G & Mi (-RT) & Mi (NTC) & & Mi (-RT) & Mi (NTC) & \\
+      G & Mi(-RT) & Mi(NTC) & & Mi(-RT) & Mi(NTC) & \\
       \hline
       H & & & & & &\\
       \hline
