Latest build, finished results for gel

--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -165,10 +165,15 @@
     surrounding wells of similar product (i.e. $\beta$-actin for just cells).
     Lanes 2-4 (Wells: E1,E2,E3,G1) consists of -RT solutions. These lanes are empty displaying
     genomic DNA that is almost undetectable. Lane 8 (Well A5) displays a lack of cDNA
-    for Interferon-$\alpha$ where there should exist amplified cDNA.
-
-    
-
+    for Interferon-$\alpha$ where there should exist amplified cDNA. Lanes  7,9,11 and 14
+    (Wells: C1,C4,D10,A8) are displaying bands at a greater illumination compared to other lanes.
+    Lanes 7 and 9 consist of Just Cells in Interleukin-6 and Interferon-$\alpha$ respectively.
+    Lanes 11 and 14 are polyplex cells treated for a 24 hour duration in both the [AV] and [TK] variants
+    for RPL13A and $\beta$-actin respectively.
+    Lanes 6,12, and 13 contain smaller amounts of cDNA compared to Lanes 7,9,11 and 14 as they do not contain
+    as great illumination.
+    Lane 6 (Well B1) is cells that were not washed for Interleukin 6.
+    Lanes 12 and 13 (Wells: E11,E12) consist of -RT solutions for RPL13A displaying amplified genomic DNA.
 \section{Discussion}
 
 The mRNA was purified and converted to cDNA. THe resulting concentration was relatively high compared to peers. This eludes that the
