--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -35,14 +35,14 @@
   defective gene into the patient's cells to alter the patients genetic material.
   The alternative is a non viral gene therapy method which can often have simple and large scale production
   with low host immunogenicity. However, non viral gene therapy can often yield low transfection efficiencies.
-  New advances in technologies have imporoved transfection efficiency by leveraging cytokines. Cytokines
+  New advances in technologies have improved transfection efficiency by modifying cytokines. Cytokines
   are small protiens that are involved in various types of cell signaling. Classifications of these signalings
-  include interferos, chemokines and interleukins.
-
-
-%The role of cell division in gene expression is important to understand in order to guide the development of better nonviral gene delivery materials. Microinjection experiments have repeatedly confirmed that transgenes must reach the nucleus to generate a gene product,1–5 indicating that the nuclear membrane is a major barrier to gene expression. Some studies have shown that nuclear uptake of plasmid DNA (pDNA) is strongly dependent on cell division4,6–11 with seminal work having been done by Mario Capecchi more than 30 years ago.1 Other research has shown that cell division is not required for nuclear uptake of pDNA12–16 with most studies exploiting nuclear localization signals (NLS) for transport through nuclear pore complexes.17 Indeed, Zanta et al. have shown that a single NLS is able to translocate pDNA to the nucleus.18
-
-
+  include interferos, chemokines and interleukins. One major factor that often inhibits the usage of non viral gene therapy is the
+  inate immune response. The inate immune response to foreign DNA (often by viruses or bacteria) through cytokines
+  as a trigger that rejects the foreign DNA through one of three possibilities. These possibilities include: inducing
+  cell death, halting the production of protien or recruiting immune cells to initiate an adaptive immune response (e.g. antibody protection).
+  This experiment aims to see if the inate immune response can be inhibited or manipulated to improve gene therapy treatments.
+  
   In this experiment, there are two devices used. The first device, the Qubit, is an electronic device that quantifies a substance through fluorescence.
   The second device is qPCR.
   Reverse Transcriptase (RT)qPCR is a technique used to describe the level of genetic expression is occuring in vitro
@@ -98,8 +98,7 @@
       a different set of calculations were needed since the original cDNA concentrations were around 11 ng/ $\mu$ L.
       All wells contained the Green Supermix. The columns were sorted in the following manner:
       1-3 contained IL6, 4-6 contained INF$\alpha$, 7-9 contained $\beta$-acting and 10-12 contained RPL13A.
-      Refer to Figure
-      The QtPCR was ran for 40 cycles.
+      Refer to Table II for a compressed map of the PCR wells. The QtPCR was ran for 40 cycles.
 
     \subsection{Gel Electrophoresis}
       In order to further understand the results gained from the QtPCR, an 1.2% agarose gel was poured
@@ -149,9 +148,6 @@
       \end{tabular}
       \end{center}
     \end{table}
-
-
-
 
   \subsection{Gel Electrophoresis}
 
