--- a/report.tex
+++ b/report.tex
@@ -35,15 +35,20 @@
   defective gene into the patient's cells to alter the patients genetic material.
   The alternative is a non viral gene therapy method which can often have simple and large scale production
   with low host immunogenicity. However, non viral gene therapy can often yield low transfection efficiencies.
-  New advances in technologies have improved transfection efficiency by modifying cytokines. Cytokines
-  are small protiens that are involved in various types of cell signaling. Classifications of these signalings
-  include interferos, chemokines and interleukins. One major factor that often inhibits the usage of non viral gene therapy is the
-  inate immune response. The inate immune response to foreign DNA (often by viruses or bacteria) through cytokines
+  This low yield is often due to The inate immune response. The inate immune response to foreign DNA (often by viruses or bacteria) through cytokines
   as a trigger that rejects the foreign DNA through one of three possibilities. These possibilities include: inducing
   cell death, halting the production of protien or recruiting immune cells to initiate an adaptive immune response (e.g. antibody protection).
+  New advances in technologies have improved transfection efficiency by modifying cytokines. Cytokines
+  are small protiens that are involved in various types of cell signaling. Classifications of these signalings
+  include interferos, chemokines and interleukins.
   This experiment aims to see if the inate immune response can be inhibited or manipulated to improve gene therapy treatments.
+
+  In this experiment, the prostate cell line will be used for the transfection of foreign DNA. Prostate cells provide a glandular function
+  in the body by generating fluid which serves several functions in reproduction. The analysis will focus on quantifying foreign mRNA that will be
+  produced from the prostate cells. This process will be carried out by nanoparticles that are formed by the self-assembly of DNA/RNA and cationic polymers
+  called polyplexes. Polyplexes are specifically designed to deliver foreign genetic material to cells by a process called transfection.
   
-  In this experiment, there are two devices used. The first device, the Qubit, is an electronic device that quantifies a substance through fluorescence.
+  There are two devices used in this experiment. The first device, the Qubit, is an electronic device that quantifies a substance through fluorescence.
   The second device is qPCR.
   Reverse Transcriptase (RT)qPCR is a technique used to describe the level of genetic expression is occuring in vitro
   by measuring the amount of mRNA within a sample. In this technique, mRNA is reverse transcribed in to complementary DNA by
@@ -52,7 +57,6 @@
   The first solution will be a +RT which will include reverse transcriptase and thus, will have cDNA.
   The second solution will be a -RT solution which will lack reverse transcriptase.
   When QtPCR is performed on the -RT solution, genomic DNA will be amplified and will be seen in the resulting data.
-
   In this experiment, $\beta$-actin and RPL13A will be used for direct controls against the immunological transcripts.
   INF$\beta$ will not be used as it will only appear after cycle 40 in the experiment producing undesirable results.
   The No Template Control will consist of DEPC water.
@@ -154,11 +158,11 @@
     \begin{figure}[t]
       \centering
       \includegraphics[width=8cm]{supergel}
-      \caption{A 1.2 agarose gel}
+      \caption{A 1.2\% agarose gel used to further analyze discrepencies seen in the melt curves of the PCR product.}
       \label{fig:mesh1}
     \end{figure}
 
-    The selections of PCR products was based off of melt curves that were inconsistent with
+    Refering to Figure 1, it can be seen that the selections of PCR products was based off of melt curves that were inconsistent with
     surrounding wells of similar product (i.e. $\beta$-actin for just cells).
     Lanes 2-4 (Wells: E1,E2,E3,G1) consists of -RT solutions. These lanes are empty displaying
     genomic DNA that is almost undetectable. Lane 8 (Well A5) displays a lack of cDNA
