--- a/report.tex
+++ b/report.tex
@@ -198,36 +198,28 @@
 
 \section{Discussion}
 
-The mRNA was purified and converted to cDNA. THe resulting concentration was relatively high compared to peers. This eludes that the
-treatment for these cells of polycationic DNA for 24 hours could result in higher transcription rates.
-
-
-Both the Poly24[AV] and Poly24[Tk] variants express higher transcription rates
-than either just cells or unwashed cells. It can be seen that it depends on both
-the immunological transcript and if the cell has been washed to what degree.
-
-
-exhibit small numerical values for fold inductions which displays a large factor of
-
-In the resulting fold induction calculations, it can be seen in Table 1
-for both versions of Poly24[AV/Tk] that the treatment of polyplex in cells
-often yields higher transcription rates when comparing to just cells or unwashed cells.
-
-that in
-the presence of an immune response the
-comparison
-to the
-
-It can also be seen in Table I that the lack of washing cells
-can diminish the transcription rates.
+As discussed in the results, both the Poly24[AV] and Poly24[Tk] variants express lower transcription rates
+than either just cells or unwashed cells in the presence of an immunological response.
+The resulting value does depend upon if the control cells were washed or unwashed, which control
+protien was compared against and which immunological response was used. In all cases the
+polyplex treatment at 24 hours alone inhibits genetic transcription. However,
+the addition of iCRT in the treatment compared against the nowash at both six hour long treatments
+displays a positive growth in transcription levels. This would suggest that polyplex alone
+would only inhibit transcription rates, but paired with iCRT or something of a similar nature
+increases transcription from a basil level. This would need to be further investigated.
+It is also interesting how washed versus unwashed cells
+exhibits a large difference in transcription levels. It is possible that the washed cells
+clears out the chemical treatment that would inhibit transcription rates. If so, a secondary
+control may need to be used when running this experiment again.
 
 \section{Conclusion}
 
-To futher understand the nature polyplex treated cells in response to a specific duration,
-it would be suggested that the polyplex cells are treated in 3 hour increments from 3 hours to 24 hours.
-
-
-\section{Figures}
+Polyplex by itself will only further inhibit transcription rates in the presence of an immunological response.
+However, the addition of iCRT to the treatement created a scenario where polyplex increased the
+transcription rates. The usage of iCRT in the treatment provides insight that may yield promising results towards
+a more stable version of non viral gene therapy. No conclusion was able to be derived from the timeframes of 6 hour
+and 24 hour treated polyplex. Thus, to futher understand the nature polyplex and iCRT treated cells in response to a specific duration,
+it would be suggested that the polyplex cells are treated in 3 hour increments from 3 hours to 24 hours both with and without iCRT.
 
   \begin{table}[!hbt]
     % Center the table
